--- a/anile-media-website/package.json
+++ b/anile-media-website/package.json
@@ -12,8 +12,10 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.7.0",
     "next": "^12.1.5",
+    "quill": "^1.3.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-quill": "^1.3.5"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.6.0"
