--- a/anile-media-website/package.json
+++ b/anile-media-website/package.json
@@ -11,6 +11,9 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.7.0",
+    "axios": "^0.27.2",
+    "firebase": "^9.8.1",
+    "firebase-admin": "^10.2.0",
     "next": "^12.1.5",
     "quill": "^1.3.6",
     "react": "^17.0.2",
