--- a/anile-media-website/package.json
+++ b/anile-media-website/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/lab": "^5.0.0-alpha.83",
     "@mui/material": "^5.7.0",
     "axios": "^0.27.2",
     "firebase": "^9.8.1",
@@ -18,6 +20,7 @@
     "next": "^12.1.5",
     "quill": "^1.3.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5"
   },
