--- a/anile-media-website/package.json
+++ b/anile-media-website/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "firebase": "^9.8.1",
     "firebase-admin": "^10.2.0",
+    "jquery": "^3.6.0",
     "mdb-react-ui-kit": "^3.0.0",
     "next": "^12.1.5",
     "quill": "^1.3.6",
