--- a/anile-media-website/package.json
+++ b/anile-media-website/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.6.0",
     "mdb-react-ui-kit": "^3.0.0",
     "next": "^12.1.5",
+    "next-themes": "^0.2.0",
     "quill": "^1.3.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
