--- a/anile-media-website/package.json
+++ b/anile-media-website/package.json
@@ -13,7 +13,10 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/lab": "^5.0.0-alpha.83",
     "@mui/material": "^5.7.0",
+    "@splidejs/react-splide": "^0.7.7",
+    "@splidejs/splide": "^4.0.6",
     "axios": "^0.27.2",
+    "create-react-class": "^15.7.0",
     "firebase": "^9.8.1",
     "firebase-admin": "^10.2.0",
     "jquery": "^3.6.0",
