--- a/anile-media-website/package.json
+++ b/anile-media-website/package.json
@@ -27,7 +27,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
-    "react-quill": "^1.3.5"
+    "react-quill": "^1.3.5",
+    "react-router": "^6.3.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.6.0"
